--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
       </div>
       <div class="equipment-rental__right">
         <form class="message__form form">
-          <div class="input__wrapp error">
+          <div class="input__wrapp">
             <input type="text" name="name" class="_req message__input" />
             <span class="input-placeholder p1 p1-light">Ваше имя</span>
             <span class="input-placeholder-error">The field is required.</span>
@@ -476,7 +476,7 @@
             <span class="input-placeholder p1 p1-light">Ваш город</span>
             <span class="input-placeholder-error">The field is required.</span>
           </div>
-          <div class="input__wrapp error">
+          <div class="input__wrapp">
             <input type="tel" name="phone" class="_req message__input" />
             <span class="input-placeholder p1 p1-light">Ваш телефон</span>
             <span class="input-placeholder-error">The field is required.</span>
