--- a/product.html
+++ b/product.html
@@ -692,8 +692,7 @@
     <!-- Jquery -->
     <script src="js/libs/jq-lib.js"></script>
     <!-- Slick-slider lib -->
-    <script src="js/libs/slick-slider-lib.js"></script>
-    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script src="js/libs/swiper.js"></script>
     <!-- GSAP -->
     <script src="js/libs/gsap.js"></script>
     <script src="js/libs/gsapPlugins.js"></script>
