--- a/product.html
+++ b/product.html
@@ -8,10 +8,7 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0"
     />
     <link rel="stylesheet" href="css/style.min.css" />
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/swiper/swiper-bundle.min.css"
-    />
+
     <title>Document</title>
   </head>
   <body class="white-bg">
@@ -294,7 +291,7 @@
                 <li class="calendar__item passed">13</li>
                 <li class="calendar__item passed">14</li>
                 <li class="calendar__item passed">15</li>
-                <li class="calendar__item current">16</li>
+                <li class="calendar__item">16</li>
                 <li class="calendar__item">17</li>
                 <li class="calendar__item">18</li>
                 <li class="calendar__item">19</li>
@@ -697,7 +694,7 @@
     <script src="js/libs/gsap.js"></script>
     <script src="js/libs/gsapPlugins.js"></script>
     <script src="js/animation.js"></script>
-    <script src="js/my-anim.js"></script>
+    <script src="js/animation-pages/product.js"></script>
 
     <!-- Styles -->
     <script src="js/slider.js"></script>
