--- a/index.html
+++ b/index.html
@@ -787,7 +787,7 @@
     <script src="js/libs/gsap.js"></script>
     <script src="js/libs/gsapPlugins.js"></script>
     <script src="js/animation.js"></script>
-    <script src="js/my-anim.js"></script>
+    <script src="js/animation-pages/index.js"></script>
     <!-- Styles -->
     <script src="js/basket.js"></script>
     <script src="js/grid-toggler.js"></script>
