фикс кнопки корзины

--- a/product.html
+++ b/product.html
@@ -689,7 +689,7 @@
     <!-- Jquery -->
     <script src="js/libs/jq-lib.js"></script>
     <!-- Slick-slider lib -->
-    <script src="js/libs/swiper.js"></script>
+    <script src="js/libs/swiper-bundle.min.js.map.js"></script>
     <!-- GSAP -->
     <script src="js/libs/gsap.js"></script>
     <script src="js/libs/gsapPlugins.js"></script>
