--- a/rent.html
+++ b/rent.html
@@ -417,7 +417,7 @@
     <script src="js/libs/gsap.js"></script>
     <script src="js/libs/gsapPlugins.js"></script>
     <script src="js/animation.js"></script>
-    <script src="js/my-anim.js"></script>
+    <script src="js/animation-pages/rent.js"></script>
     <!-- Styles -->
     <script src="js/basket.js"></script>
     <script src="js/burger.js"></script>
