--- a/product.html
+++ b/product.html
@@ -7,8 +7,10 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0"
     />
+    <script src="js/libs/gsap.js"></script>
+    <script src="js/libs/gsapPlugins.js"></script>
+    <script src="js/animation.js"></script>
     <link rel="stylesheet" href="css/style.min.css" />
-
     <title>Document</title>
   </head>
   <body class="white-bg">
@@ -689,11 +691,9 @@
     <!-- Jquery -->
     <script src="js/libs/jq-lib.js"></script>
     <!-- Slick-slider lib -->
-    <script src="js/libs/swiper-bundle.min.js.map.js"></script>
+    <script src="js/libs/swiper-bundle.min.js"></script>
     <!-- GSAP -->
-    <script src="js/libs/gsap.js"></script>
-    <script src="js/libs/gsapPlugins.js"></script>
-    <script src="js/animation.js"></script>
+
     <script src="js/animation-pages/product.js"></script>
 
     <!-- Styles -->
