--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0"
     />
+    <link rel="shortcut icon" href="img/favicon.svg" type="image/x-icon" />
     <script src="js/libs/gsap.js"></script>
     <script src="js/libs/gsapPlugins.js"></script>
     <script src="js/animation.js"></script>
@@ -40,16 +41,13 @@
             <li>
               <a href="privacy.html">условия проката</a>
             </li>
-            <li class="hide">
-              <button class="header__lang">Русский</button>
-            </li>
           </ul>
           <a href="index.html" class="header__logo">
             <img src="img/logo.svg" alt="" />
           </a>
           <ul>
             <li>
-              <a href="#">Контакты</a>
+              <a href="#form">Контакты</a>
             </li>
 
             <li>
@@ -249,135 +247,135 @@
           </div>
           <span class="products__item-name">Canon EOS 5D Mark IV body</span>
         </a>
-        <!-- <a href="#" class="products__item">
-      <div class="products__item-image">
-        <img src="img/image-3.png" alt="image" />
+        <a href="#" class="products__item">
+          <div class="products__item-image">
+            <img src="img/image-3.png" alt="image" />
+          </div>
+          <span class="products__item-name">Canon EOS 5D Mark IV body</span>
+        </a>
+        <a href="#" class="products__item">
+          <div class="products__item-image">
+            <img src="img/image-4.png" alt="image" />
+          </div>
+          <span class="products__item-name">Canon EOS 5D Mark IV body</span>
+        </a>
+        <a href="#" class="products__item">
+          <div class="products__item-image">
+            <img src="img/image-5.png" alt="image" />
+          </div>
+          <span class="products__item-name">Canon EOS 5D Mark IV body</span>
+        </a>
+        <a href="#" class="products__item">
+          <div class="products__item-image">
+            <img src="img/image-1.png" alt="image" />
+          </div>
+          <span class="products__item-name">Canon EOS 5D Mark IV body</span>
+        </a>
+        <a href="#" class="products__item">
+          <div class="products__item-image">
+            <img src="img/image-2.png" alt="image" />
+          </div>
+          <span class="products__item-name">Canon EOS 5D Mark IV body</span>
+        </a>
+        <a href="#" class="products__item">
+          <div class="products__item-image">
+            <img src="img/image-3.png" alt="image" />
+          </div>
+          <span class="products__item-name">Canon EOS 5D Mark IV body</span>
+        </a>
+        <a href="#" class="products__item">
+          <div class="products__item-image">
+            <img src="img/image-4.png" alt="image" />
+          </div>
+          <span class="products__item-name">Canon EOS 5D Mark IV body</span>
+        </a>
+        <a href="#" class="products__item">
+          <div class="products__item-image">
+            <img src="img/image-1.png" alt="image" />
+          </div>
+          <span class="products__item-name">Canon EOS 5D Mark IV body</span>
+        </a>
+        <a href="#" class="products__item">
+          <div class="products__item-image">
+            <img src="img/image-1.png" alt="image" />
+          </div>
+          <span class="products__item-name">Canon EOS 5D Mark IV body</span>
+        </a>
       </div>
-      <span class="products__item-name">Canon EOS 5D Mark IV body</span>
-    </a>
-    <a href="#" class="products__item">
-      <div class="products__item-image">
-        <img src="img/image-4.png" alt="image" />
+      <div class="products__grid">
+        <a href="product.html" class="products__item">
+          <div class="products__item-image">
+            <img src="img/image-1.png" alt="image" />
+          </div>
+          <span class="products__item-name">Canon EOS 5D Mark IV body</span>
+        </a>
+        <a href="#" class="products__item">
+          <div class="products__item-image">
+            <img src="img/image-2.png" alt="image" />
+          </div>
+          <span class="products__item-name">Canon EOS 5D Mark IV body</span>
+        </a>
+        <a href="#" class="products__item">
+          <div class="products__item-image">
+            <img src="img/image-2-big.png" alt="image" />
+          </div>
+          <span class="products__item-name">Canon EOS 5D Mark IV body</span>
+        </a>
+        <a href="#" class="products__item">
+          <div class="products__item-image">
+            <img src="img/image-3.png" alt="image" />
+          </div>
+          <span class="products__item-name">Canon EOS 5D Mark IV body</span>
+        </a>
+        <a href="#" class="products__item">
+          <div class="products__item-image">
+            <img src="img/image-4.png" alt="image" />
+          </div>
+          <span class="products__item-name">Canon EOS 5D Mark IV body</span>
+        </a>
+        <a href="#" class="products__item">
+          <div class="products__item-image">
+            <img src="img/image-5.png" alt="image" />
+          </div>
+          <span class="products__item-name">Canon EOS 5D Mark IV body</span>
+        </a>
+        <a href="#" class="products__item">
+          <div class="products__item-image">
+            <img src="img/image-1.png" alt="image" />
+          </div>
+          <span class="products__item-name">Canon EOS 5D Mark IV body</span>
+        </a>
+        <a href="#" class="products__item">
+          <div class="products__item-image">
+            <img src="img/image-2.png" alt="image" />
+          </div>
+          <span class="products__item-name">Canon EOS 5D Mark IV body</span>
+        </a>
+        <a href="#" class="products__item">
+          <div class="products__item-image">
+            <img src="img/image-3.png" alt="image" />
+          </div>
+          <span class="products__item-name">Canon EOS 5D Mark IV body</span>
+        </a>
+        <a href="#" class="products__item">
+          <div class="products__item-image">
+            <img src="img/image-4.png" alt="image" />
+          </div>
+          <span class="products__item-name">Canon EOS 5D Mark IV body</span>
+        </a>
+        <a href="#" class="products__item">
+          <div class="products__item-image">
+            <img src="img/image-1.png" alt="image" />
+          </div>
+          <span class="products__item-name">Canon EOS 5D Mark IV body</span>
+        </a>
+        <a href="#" class="products__item">
+          <div class="products__item-image">
+            <img src="img/image-1.png" alt="image" />
+          </div>
+          <span class="products__item-name">Canon EOS 5D Mark IV body</span>
+        </a>
       </div>
-      <span class="products__item-name">Canon EOS 5D Mark IV body</span>
-    </a> -->
-        <!-- <a href="#" class="products__item">
-      <div class="products__item-image">
-        <img src="img/image-5.png" alt="image" />
-      </div>
-      <span class="products__item-name">Canon EOS 5D Mark IV body</span>
-    </a>
-    <a href="#" class="products__item">
-      <div class="products__item-image">
-        <img src="img/image-1.png" alt="image" />
-      </div>
-      <span class="products__item-name">Canon EOS 5D Mark IV body</span>
-    </a>
-    <a href="#" class="products__item">
-      <div class="products__item-image">
-        <img src="img/image-2.png" alt="image" />
-      </div>
-      <span class="products__item-name">Canon EOS 5D Mark IV body</span>
-    </a>
-    <a href="#" class="products__item">
-      <div class="products__item-image">
-        <img src="img/image-3.png" alt="image" />
-      </div>
-      <span class="products__item-name">Canon EOS 5D Mark IV body</span>
-    </a>
-    <a href="#" class="products__item">
-      <div class="products__item-image">
-        <img src="img/image-4.png" alt="image" />
-      </div>
-      <span class="products__item-name">Canon EOS 5D Mark IV body</span>
-    </a> -->
-        <!-- <a href="#" class="products__item">
-      <div class="products__item-image">
-        <img src="img/image-1.png" alt="image" />
-      </div>
-      <span class="products__item-name">Canon EOS 5D Mark IV body</span>
-    </a>
-    <a href="#" class="products__item">
-      <div class="products__item-image">
-        <img src="img/image-1.png" alt="image" />
-      </div>
-      <span class="products__item-name">Canon EOS 5D Mark IV body</span>
-    </a> -->
-      </div>
-      <!-- <div class="products__grid">
-    <a href="product.html" class="products__item">
-      <div class="products__item-image">
-        <img src="img/image-1.png" alt="image" />
-      </div>
-      <span class="products__item-name">Canon EOS 5D Mark IV body</span>
-    </a>
-    <a href="#" class="products__item">
-      <div class="products__item-image">
-        <img src="img/image-2.png" alt="image" />
-      </div>
-      <span class="products__item-name">Canon EOS 5D Mark IV body</span>
-    </a>
-    <a href="#" class="products__item">
-      <div class="products__item-image">
-        <img src="img/image-2-big.png" alt="image" />
-      </div>
-      <span class="products__item-name">Canon EOS 5D Mark IV body</span>
-    </a>
-    <a href="#" class="products__item">
-      <div class="products__item-image">
-        <img src="img/image-3.png" alt="image" />
-      </div>
-      <span class="products__item-name">Canon EOS 5D Mark IV body</span>
-    </a>
-    <a href="#" class="products__item">
-      <div class="products__item-image">
-        <img src="img/image-4.png" alt="image" />
-      </div>
-      <span class="products__item-name">Canon EOS 5D Mark IV body</span>
-    </a>
-    <a href="#" class="products__item">
-      <div class="products__item-image">
-        <img src="img/image-5.png" alt="image" />
-      </div>
-      <span class="products__item-name">Canon EOS 5D Mark IV body</span>
-    </a>
-    <a href="#" class="products__item">
-      <div class="products__item-image">
-        <img src="img/image-1.png" alt="image" />
-      </div>
-      <span class="products__item-name">Canon EOS 5D Mark IV body</span>
-    </a>
-    <a href="#" class="products__item">
-      <div class="products__item-image">
-        <img src="img/image-2.png" alt="image" />
-      </div>
-      <span class="products__item-name">Canon EOS 5D Mark IV body</span>
-    </a>
-    <a href="#" class="products__item">
-      <div class="products__item-image">
-        <img src="img/image-3.png" alt="image" />
-      </div>
-      <span class="products__item-name">Canon EOS 5D Mark IV body</span>
-    </a>
-    <a href="#" class="products__item">
-      <div class="products__item-image">
-        <img src="img/image-4.png" alt="image" />
-      </div>
-      <span class="products__item-name">Canon EOS 5D Mark IV body</span>
-    </a>
-    <a href="#" class="products__item">
-      <div class="products__item-image">
-        <img src="img/image-1.png" alt="image" />
-      </div>
-      <span class="products__item-name">Canon EOS 5D Mark IV body</span>
-    </a>
-    <a href="#" class="products__item">
-      <div class="products__item-image">
-        <img src="img/image-1.png" alt="image" />
-      </div>
-      <span class="products__item-name">Canon EOS 5D Mark IV body</span>
-    </a>
-  </div> -->
       <a href="#" class="btn btn-more"
         ><span class="btn__brackets btn__brackets--left">(</span>
         view more
@@ -452,7 +450,7 @@
       </div>
     </section>
 
-    <section class="equipment-rental">
+    <section class="equipment-rental" id="form">
       <div class="equipment-rental__left">
         <h2 class="equipment-rental__title">
           <span>арендуйте</span>
@@ -470,27 +468,52 @@
       <div class="equipment-rental__right">
         <form class="message__form form">
           <div class="input__wrapp">
-            <input type="text" name="name" class="_req message__input" />
+            <input
+              type="text"
+              name="name"
+              class="_req message__input"
+              autocomplete="no"
+            />
             <span class="input-placeholder p1 p1-light">Ваше имя</span>
             <span class="input-placeholder-error">The field is required.</span>
           </div>
           <div class="input__wrapp">
-            <input type="text" name="city" class="_req message__input" />
+            <input
+              type="text"
+              name="city"
+              class="_req message__input"
+              autocomplete="no"
+            />
             <span class="input-placeholder p1 p1-light">Ваш город</span>
             <span class="input-placeholder-error">The field is required.</span>
           </div>
           <div class="input__wrapp">
-            <input type="tel" name="phone" class="_req message__input" />
+            <input
+              type="tel"
+              name="phone"
+              class="_req message__input"
+              autocomplete="no"
+            />
             <span class="input-placeholder p1 p1-light">Ваш телефон</span>
             <span class="input-placeholder-error">The field is required.</span>
           </div>
           <div class="input__wrapp">
-            <input type="email" name="email" class="_req message__input" />
+            <input
+              type="email"
+              name="email"
+              class="_req message__input"
+              autocomplete="off"
+            />
             <span class="input-placeholder p1 p1-light">Ваш e-mail</span>
             <span class="input-placeholder-error">The field is required.</span>
           </div>
           <div class="input__wrapp">
-            <input type="text" name="message" class="_req message__input" />
+            <input
+              type="text"
+              name="message"
+              class="_req message__input"
+              autocomplete="no"
+            />
             <span class="input-placeholder p1 p1-light">ваше сообщение</span>
             <span class="input-placeholder-error">The field is required.</span>
           </div>
@@ -690,7 +713,6 @@
     <div class="fix-nav --dark">
       <div class="fix-nav__content">
         <div class="fix-nav__head">
-          <button class="header__lang">Русский</button>
           <a href="/" class="header__logo nuxt-link-active"
             ><img src="img/logo-black.svg" alt="logo" class="header__logo-img"
           /></a>
@@ -723,7 +745,7 @@
           </div>
           <div class="fix-nav__block -block-3 h2">
             <div class="fix-nav__links">
-              <a href="#" class="fix-nav__link --small">Контакты</a>
+              <a href="#form" class="fix-nav__link --small">Контакты</a>
               <button href="#" class="fix-nav__link --small basket-btn">
                 Корзина
               </button>
