--- a/privacy.html
+++ b/privacy.html
@@ -7,6 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0"
     />
+    <link rel="shortcut icon" href="img/favicon.svg" type="image/x-icon" />
     <link rel="stylesheet" href="css/style.min.css" />
     <script src="js/libs/gsap.js"></script>
     <script src="js/libs/gsapPlugins.js"></script>
@@ -37,9 +38,6 @@
             </li>
             <li class="active">
               <a href="privacy.html">условия проката</a>
-            </li>
-            <li class="hide">
-              <button class="header__lang">Русский</button>
             </li>
           </ul>
           <a href="index.html" class="header__logo">
@@ -380,7 +378,6 @@
     <div class="fix-nav --dark">
       <div class="fix-nav__content">
         <div class="fix-nav__head">
-          <button class="header__lang">Русский</button>
           <a href="/" class="header__logo nuxt-link-active"
             ><img src="img/logo-black.svg" alt="logo" class="header__logo-img"
           /></a>
