--- a/rent.html
+++ b/rent.html
@@ -16,18 +16,6 @@
   </head>
 
   <body class="white-bg">
-    <div class="curtains">
-      <div class="curtains__inner">
-        <ul>
-          <li><a href="index.html">Главная</a></li>
-          <li><a href="products.html">Товары</a></li>
-          <li><a href="product.html">Страница продукта</a></li>
-          <li><a href="privacy.html">Условия проката</a></li>
-          <li><a href="rent.html">АРЕНДУЙТЕ ТЕХНИКУ</a></li>
-        </ul>
-      </div>
-    </div>
-
     <div class="wrapper">
       <div class="header-wrapper">
         <header class="header h_fix dark">
@@ -48,7 +36,7 @@
             </a>
             <ul>
               <li>
-                <a href="#">Контакты</a>
+                <a href="/#form" class="contact-btn">Контакты</a>
               </li>
 
               <li>
@@ -375,7 +363,9 @@
             </div>
             <div class="fix-nav__block -block-3 h2">
               <div class="fix-nav__links">
-                <a href="#" class="fix-nav__link --small">Контакты</a>
+                <a href="/#form" class="fix-nav__link --small contact-btn"
+                  >Контакты</a
+                >
                 <button href="#" class="fix-nav__link --small basket-btn">
                   Корзина
                 </button>
@@ -444,7 +434,7 @@
     <!-- Styles -->
     <script src="js/basket.js"></script>
     <script src="js/burger.js"></script>
-    <script src="js/curtains.js"></script>
+
     <script src="js/form.js"></script>
   </body>
 </html>
