--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
     </section>
     <section class="products">
       <div class="products__grid">
-				<p class="products__item-name">No results were found for your search</p>
+        <p class="products__no-res">No results were found for your search</p>
         <!-- <a href="product.html" class="products__item">
           <div class="products__item-image">
             <img src="img/image-1.png" alt="image" />
@@ -292,7 +292,7 @@
           <span class="products__item-name">Canon EOS 5D Mark IV body</span>
         </a> -->
       </div>
-      
+
       <a href="#" class="btn btn-more"
         ><span class="btn__brackets btn__brackets--left">(</span>
         view more
