--- a/product.html
+++ b/product.html
@@ -685,6 +685,7 @@
     <script src="js/animation-pages/product.js"></script>
 
     <!-- Styles -->
+    <script src="js/reloader.js"></script>
     <script src="js/slider.js"></script>
     <script src="js/basket.js"></script>
     <script src="js/scroll.js"></script>
